# ticket-api

./: .flaskenv  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  run.py  start-service  tox.ini
.buildkite/: pipeline.yaml
.buildkite/scripts/: build.sh  package.sh
.buildkite/steps/deploy/: deploy.sh
.buildkite/steps/deploy/templates/: kustomization.yaml
.buildkite/steps/package/: package.sh
.github/: dependabot.yaml  release-drafter.yaml
.github/actions/poetry-setup/: action.yaml
.github/workflows/: ci.yaml  registry.yaml  release-drafter.yaml  version.yaml
.kustomization/: README.md  README.rst  kustomization.yaml
.kustomization/base/: cm.yaml  kustomization.yaml  psp.yaml  rbac.yaml  sa.yaml
.kustomization/base/.secrets/: .proxy.yaml
.kustomization/base/secrets/: kustomization.yaml
.kustomization/components/: kustomization.yaml
.kustomization/components/api/: deployment.yaml  ingress.yaml  kustomization.yaml  svc.yaml
.kustomization/components/base/: configmap.yaml  kustomization.yaml  sa.yaml  secrets.yaml
.kustomization/components/bridge/: kustomization.yaml  pod.yaml
.kustomization/namespaces/: kustomization.yaml
.kustomization/namespaces/base/: kustomization.yaml
.kustomization/namespaces/services/: kustomization.yaml
.kustomization/overlays/dev/: kustomization.yaml
.kustomization/overlays/dev/.secrets/: kustomization.yaml
.kustomization/overlays/dev/configs/: base.yaml  kustomization.yaml
.kustomization/overlays/dev/ingress/: api.yaml
.kustomization/overlays/dev/sealed-secrets/: kustomization.yaml
.kustomization/overlays/dev/secrets/: .base.yaml  .db.template.yaml  .postgres.yaml  kustomization.yaml
.kustomization/overlays/prd/: kustomization.yaml
.kustomization/overlays/prd/.secrets/: kustomization.yaml
.kustomization/overlays/prd/configs/: base.yaml  cm.yaml  kustomization.yaml
.kustomization/overlays/prd/ingress/: api.yaml  kustomization.yaml
.kustomization/overlays/prd/sealed-secrets/: kustomization.yaml
.kustomization/overlays/prd/secrets/: .base.template.yaml  .postgres.template.yaml  .postgres.yaml  kustomization.yaml
dependencies/manage.py-0.2.10/manage.py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
hpdasupport/: __init__.py  atlassian.py  config.py  hpdasupport.py  manager.py  oauth2.py  subscription.py  ticket.py
src/: __init__.py  app.py
src/api/: tickets.py
src/cli/: DatabaseTokenBackend.py  o365.py
src/cli/O365/: backend.py  cli.py
src/cli/o365/: DatabaseTokenBackend.py  __init__.py  cli.py
src/dto/: test.py  ticket.py
src/dto/fields/: Email.py
src/dto/jira/: attachment.py  comment.py  issue.py  issueType.py  project.py  status.py  user.py
src/misc/: converters.py  utils.py
src/models/: OAuth2Token.py  Ticket.py  __init__.py  jira.py  ticket.py  tokens.py
src/models/jira/: Board.py  __init__.py
src/namespaces/service/: index.py
src/namespaces/tickets/: index.py
src/oas3/: oas3.yaml
src/oas3/components/schemas/: error.py  ticket.py
src/resources/: test.py  testview.py  tickets.py
src/schemas/: ticket.py
src/schemas/deserializers/: CreateTicket.py  TicketSearchCriteria.py  tickets.py
src/schemas/fields/: Email.py
src/schemas/jira/: attachment.py  comment.py  issue.py  project.py  status.py
src/schemas/serializers/: http.py
src/schemas/serializers/jira/: Attachment.py  Comment.py  Issue.py  Rendered.py
src/serialization/: token.py
src/serialization/deserializers/: CreateTicket.py  CreateTicketComment.py  TicketSearchCriteria.py
src/serialization/serializers/jira/: Attachment.py  Comment.py  Issue.py  IssueType.py  Rendered.py  Status.py  User.py
src/serializers/inbound/: CreateTicket.py  TicketSearchCriteria.py  tickets.py
src/serializers/outbound/: HttpError.py  http.py  test.py  ticket.py
src/serializers/outbound/jira/: Attachment.py  Comment.py  Issue.py  IssueType.py  Project.py  Rendered.py  Status.py  User.py  attachment.py  comment.py
src/services/: jira.py  ticket.py  token.py
src/services/O365/filters/: JiraCommentNotificationFilter.py  RecipientControlFilter.py  SenderEmailBlacklistFilter.py  SenderEmailDomainWhitelistFilter.py  ValidateMetadataFilter.py  __init__.py  base.py
src/services/O365/handlers/: jira.py
src/services/notifications/filters/: JiraCommentNotificationFilter.py  OutlookMessageFilter.py  RecipientControlFilter.py  __init__.py  (+5 more)
src/settings/: config.py  ctx.py  env.py  oas.py  oas3.yaml
src/utils/: __init__.py  converters.py  validation.py
tests/: conftest.py
tests/functional/: conftest.py  test_app.py  test_jira.py
tests/unit/: test_jira.py
(+13 files in other folders)
