[tool.poetry]
name = "ticket-api"
version = "0.1.0"
description = "A service for managing emails coming in/out from/to a O365 mailbox and integrates them with Jira."
authors = ["Renato Damas <rena2damas@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "*", from = "src" }
]
homepage = ""
repository = "https://github.com/codectl/ticket-api"
documentation = ""
keywords = [
    "ticket-api",
    "jira",
    "O365",
    "swagger",
    "openapi",
    "oas3",
    "rest",
    "api",
    "web",
    "flask",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
apispec = { extras = ["marshmallow", "yaml"], version = "^6.0.2" }
apispec-plugins = "^0.2.0"
apispec-ui = "^0.1.4"
click = "^8.1.3"
flask = "^2.2.2"
flask-restful = "^0.3.9"
flask-sqlalchemy = "^3.0.2"
gunicorn = "^20.1.0"
jira = "^3.4.1"
mistune = "^2.0.4"
o365 = "^2.0.25"
o365-notifications = "^0.1.1"
python = "^3.9"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
coverage = "^7.1.0"
pre-commit = "^3.0.1"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"

[tool.poetry.urls]
issues = "https://github.com/codectl/ticket-api/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
