[tool.poetry]
name = "ticket-api"
version = "0.1.0"
description = "A service for managing emails coming in/out from/to a O365 mailbox and integrates them with Jira."
authors = ["Renato Damas <rena2damas@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "*", from = "src" }
]
homepage = ""
repository = "https://github.com/codectl/ticket-api"
documentation = ""
keywords = [
    "ticket-api",
    "jira",
    "O365",
    "swagger",
    "openapi",
    "oas3",
    "rest",
    "api",
    "web",
    "flask",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
apispec = { extras = ["marshmallow", "yaml"], version = "^6.1.0" }
apispec-plugins = "^0.2.0"
apispec-ui = "^0.1.4"
click = "^8.1.6"
flask = "^2.3.3"
flask-restful = "^0.3.10"
flask-sqlalchemy = "^3.0.5"
gunicorn = "^20.1.0"
jira = "^3.5.2"
mistune = "^3.0.1"
o365 = "^2.0.26"
o365-notifications = "^0.1.1"
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
coverage = "^7.3.0"
pre-commit = "^3.4.0"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"

[tool.poetry.urls]
issues = "https://github.com/codectl/ticket-api/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
